@@ -1,5 +1,5 @@
 /*
-    Copyright 2007-2012, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2007-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -36,12 +36,16 @@ namespace {
 }
 
 
-string fostlib::md5( const string &text ) {
+string fostlib::md5(const string &text) {
     return hash<CryptoPP::Weak::MD5>(text);
 }
 
 
-string fostlib::sha1( const string &text ) {
+string fostlib::sha1(const string &text) {
     return hash<CryptoPP::SHA1>(text);
 }
 
+
+string fostlib::sha256(const string &text) {
+    return hash<CryptoPP::SHA256>(text);
+}
